WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50142
[GTK] Plug leak in SoupCache
https://bugs.webkit.org/show_bug.cgi?id=50142
Summary
[GTK] Plug leak in SoupCache
Xan Lopez
Reported
2010-11-29 01:24:19 PST
We are leaking the entire contents of the SoupCache data file in the initial load.
Attachments
cacheleak.diff
(2.06 KB, patch)
2010-11-29 01:27 PST
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2010-11-29 01:27:27 PST
Created
attachment 74999
[details]
cacheleak.diff
Martin Robinson
Comment 2
2010-11-29 05:19:25 PST
Comment on
attachment 74999
[details]
cacheleak.diff Okay.
Xan Lopez
Comment 3
2010-11-30 12:19:02 PST
Comment on
attachment 74999
[details]
cacheleak.diff Landed as
r72951
.
Xan Lopez
Comment 4
2010-11-30 12:19:13 PST
Closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug