2010-11-30 Xan Lopez <xlopez@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Plug leak in SoupCache
        https://bugs.webkit.org/show_bug.cgi?id=50142

        Free the cache file contents when we don't need them anymore.

        * platform/network/soup/cache/webkit/soup-cache.c:
        (webkit_soup_cache_load):

Canonical link: https://commits.webkit.org/63406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72951 268f45cc-cd09-0410-ab3c-d52691b4dbfc